zum zinx